# sua-govtech-2024

./: NOTES.md  README.md
resources/samples/: CheckInteroperability.xml  RegisterOrganisation-UVG-LAA.xml
resources/security/: client.key  client.p12  client.pem  info.txt  server.crt
resources/wsdl/: Common.xsd  OrganizationAuthentication.xsd  OrganizationAuthenticationContainer.xsd  OrganizationAuthenticationRenewService.wsdl  OrganizationAuthenticationService.wsdl  OrganizationAuthenticationServiceTypes.xsd
src/dotnet/: Swissdec.SUA.sln
src/dotnet/Swissdec.SUA.Api/: Program.cs  Swissdec.SUA.Api.http
src/dotnet/Swissdec.SUA.Api/Properties/: launchSettings.json
src/dotnet/Swissdec.SUA.Client/: Program.cs  Swissdec.SUA.Client.csproj
src/dotnet/Swissdec.SUA.Client.Tests/: Swissdec.SUA.Client.Tests.csproj
src/dotnet/Swissdec.SUA.Client.Tests/Services/: OrganizationAuthenticationServiceTests.cs
src/dotnet/Swissdec.SUA.Client/Helpers/: CryptographyBehavior.cs  WsSecurityMessageHeader.cs  WsSignedXml.cs
src/dotnet/Swissdec.SUA.Client/Services/: OrganizationAuthenticationService.cs
src/python/: README.md  app.py  pyproject.toml
