[tool.poetry]
name = "swissdec-app"
version = "0.1.0"
description = "GovTech Hackathon 2024"
authors = ["Oleg Lavrovsky <loleg@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kivy = "^2.3.0"
zeep = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
